# patternmatch

./: CMakeLists.txt  PatternCheck.cc  PatternCheckBS177.cc  PatternCheckBS180.cc  PatternPacker.cc  PatternPackerBS177.cc  PatternPackerBS180.cc  PatternPackerBS70.cc  PatternPackerULL.cc  TreeSearch.h
